--- a/src/main/resources/templates/usuarios.html
+++ b/src/main/resources/templates/usuarios.html
@@ -128,341 +128,23 @@ scratch. This page gets rid of all links and provides the needed markup only.
 				<table id="tablaUsuarios" class="table table-bordered table-hover">
                   <thead>
                   <tr>
-                    <th>columna1</th>
-                    <th>columna2</th>
-                    <th>columna3</th>
-                    <th>columna4</th>
+                    <th>ID</th>
+                    <th>Username</th>
+                    <th>Email</th>
+                    <th>Telefono</th>
+                    <th>Acceso</th>
+                    <th>Es Admin</th>
                     <th>Acciones</th>
                   </tr>
                   </thead>
                   <tbody>
-                  <tr>
-                    <td>dato1</td>
-                    <td>dato2</td>
-                    <td>dato3</td>
-                    <td>dato4</td>
-                    <td>
-                    	<form method="post" action=/editarUsuario>
-                    		<input type="submit" name="botonModificar" value="Editar">
-                    	</form>
-                    	<form method="post" action=/eliminarUsuario>
-                    		<input type="submit" name="botonEliminar" value="Eliminar">
-                    	</form>
-                    </td>
-                  </tr>
-                  <tr>
-                    <td>dato1</td>
-                    <td>dato2</td>
-                    <td>dato3</td>
-                    <td>dato4</td>
-                    <td>
-                    	<form method="post" action=/editarUsuario>
-                    		<input type="submit" name="botonModificar" value="Editar">
-                    	</form>
-                    	<form method="post" action=/eliminarUsuario>
-                    		<input type="submit" name="botonEliminar" value="Eliminar">
-                    	</form>
-                    </td>
-                  </tr>
-                  <tr>
-                    <td>dato1</td>
-                    <td>dato2</td>
-                    <td>dato3</td>
-                    <td>dato4</td>
-                    <td>
-                    	<form method="post" action=/editarUsuario>
-                    		<input type="submit" name="botonModificar" value="Editar">
-                    	</form>
-                    	<form method="post" action=/eliminarUsuario>
-                    		<input type="submit" name="botonEliminar" value="Eliminar">
-                    	</form>
-                    </td>
-                  </tr>
-                  <tr>
-                    <td>dato1</td>
-                    <td>dato2</td>
-                    <td>dato3</td>
-                    <td>dato4</td>
-                    <td>
-                    	<form method="post" action=/editarUsuario>
-                    		<input type="submit" name="botonModificar" value="Editar">
-                    	</form>
-                    	<form method="post" action=/eliminarUsuario>
-                    		<input type="submit" name="botonEliminar" value="Eliminar">
-                    	</form>
-                    </td>
-                  </tr>
-                  <tr>
-                    <td>dato1</td>
-                    <td>dato2</td>
-                    <td>dato3</td>
-                    <td>dato4</td>
-                    <td>
-                    	<form method="post" action=/editarUsuario>
-                    		<input type="submit" name="botonModificar" value="Editar">
-                    	</form>
-                    	<form method="post" action=/eliminarUsuario>
-                    		<input type="submit" name="botonEliminar" value="Eliminar">
-                    	</form>
-                    </td>
-                  </tr>
-                  <tr>
-                    <td>dato1</td>
-                    <td>dato2</td>
-                    <td>dato3</td>
-                    <td>dato4</td>
-                    <td>
-                    	<form method="post" action=/editarUsuario>
-                    		<input type="submit" name="botonModificar" value="Editar">
-                    	</form>
-                    	<form method="post" action=/eliminarUsuario>
-                    		<input type="submit" name="botonEliminar" value="Eliminar">
-                    	</form>
-                    </td>
-                  </tr>
-                  <tr>
-                    <td>dato1</td>
-                    <td>dato2</td>
-                    <td>dato3</td>
-                    <td>dato4</td>
-                    <td>
-                    	<form method="post" action=/editarUsuario>
-                    		<input type="submit" name="botonModificar" value="Editar">
-                    	</form>
-                    	<form method="post" action=/eliminarUsuario>
-                    		<input type="submit" name="botonEliminar" value="Eliminar">
-                    	</form>
-                    </td>
-                  </tr>
-                  <tr>
-                    <td>dato1</td>
-                    <td>dato2</td>
-                    <td>dato3</td>
-                    <td>dato4</td>
-                    <td>
-                    	<form method="post" action=/editarUsuario>
-                    		<input type="submit" name="botonModificar" value="Editar">
-                    	</form>
-                    	<form method="post" action=/eliminarUsuario>
-                    		<input type="submit" name="botonEliminar" value="Eliminar">
-                    	</form>
-                    </td>
-                  </tr>
-                  <tr>
-                    <td>dato1</td>
-                    <td>dato2</td>
-                    <td>dato3</td>
-                    <td>dato4</td>
-                    <td>
-                    	<form method="post" action=/editarUsuario>
-                    		<input type="submit" name="botonModificar" value="Editar">
-                    	</form>
-                    	<form method="post" action=/eliminarUsuario>
-                    		<input type="submit" name="botonEliminar" value="Eliminar">
-                    	</form>
-                    </td>
-                  </tr>
-                  <tr>
-                    <td>dato1</td>
-                    <td>dato2</td>
-                    <td>dato3</td>
-                    <td>dato4</td>
-                    <td>
-                    	<form method="post" action=/editarUsuario>
-                    		<input type="submit" name="botonModificar" value="Editar">
-                    	</form>
-                    	<form method="post" action=/eliminarUsuario>
-                    		<input type="submit" name="botonEliminar" value="Eliminar">
-                    	</form>
-                    </td>
-                  </tr>
-                  <tr>
-                    <td>dato1</td>
-                    <td>dato2</td>
-                    <td>dato3</td>
-                    <td>dato4</td>
-                    <td>
-                    	<form method="post" action=/editarUsuario>
-                    		<input type="submit" name="botonModificar" value="Editar">
-                    	</form>
-                    	<form method="post" action=/eliminarUsuario>
-                    		<input type="submit" name="botonEliminar" value="Eliminar">
-                    	</form>
-                    </td>
-                  </tr>
-                  <tr>
-                    <td>dato1</td>
-                    <td>dato2</td>
-                    <td>dato3</td>
-                    <td>dato4</td>
-                    <td>
-                    	<form method="post" action=/editarUsuario>
-                    		<input type="submit" name="botonModificar" value="Editar">
-                    	</form>
-                    	<form method="post" action=/eliminarUsuario>
-                    		<input type="submit" name="botonEliminar" value="Eliminar">
-                    	</form>
-                    </td>
-                  </tr>
-                  <tr>
-                    <td>dato1</td>
-                    <td>dato2</td>
-                    <td>dato3</td>
-                    <td>dato4</td>
-                    <td>
-                    	<form method="post" action=/editarUsuario>
-                    		<input type="submit" name="botonModificar" value="Editar">
-                    	</form>
-                    	<form method="post" action=/eliminarUsuario>
-                    		<input type="submit" name="botonEliminar" value="Eliminar">
-                    	</form>
-                    </td>
-                  </tr>
-                  <tr>
-                    <td>dato1</td>
-                    <td>dato2</td>
-                    <td>dato3</td>
-                    <td>dato4</td>
-                    <td>
-                    	<form method="post" action=/editarUsuario>
-                    		<input type="submit" name="botonModificar" value="Editar">
-                    	</form>
-                    	<form method="post" action=/eliminarUsuario>
-                    		<input type="submit" name="botonEliminar" value="Eliminar">
-                    	</form>
-                    </td>
-                  </tr>
-                  <tr>
-                    <td>dato1</td>
-                    <td>dato2</td>
-                    <td>dato3</td>
-                    <td>dato4</td>
-                    <td>
-                    	<form method="post" action=/editarUsuario>
-                    		<input type="submit" name="botonModificar" value="Editar">
-                    	</form>
-                    	<form method="post" action=/eliminarUsuario>
-                    		<input type="submit" name="botonEliminar" value="Eliminar">
-                    	</form>
-                    </td>
-                  </tr>
-                  <tr>
-                    <td>dato1</td>
-                    <td>dato2</td>
-                    <td>dato3</td>
-                    <td>dato4</td>
-                    <td>
-                    	<form method="post" action=/editarUsuario>
-                    		<input type="submit" name="botonModificar" value="Editar">
-                    	</form>
-                    	<form method="post" action=/eliminarUsuario>
-                    		<input type="submit" name="botonEliminar" value="Eliminar">
-                    	</form>
-                    </td>
-                  </tr>
-                  <tr>
-                    <td>dato1</td>
-                    <td>dato2</td>
-                    <td>dato3</td>
-                    <td>dato4</td>
-                    <td>
-                    	<form method="post" action=/editarUsuario>
-                    		<input type="submit" name="botonModificar" value="Editar">
-                    	</form>
-                    	<form method="post" action=/eliminarUsuario>
-                    		<input type="submit" name="botonEliminar" value="Eliminar">
-                    	</form>
-                    </td>
-                  </tr>
-                  <tr>
-                    <td>dato1</td>
-                    <td>dato2</td>
-                    <td>dato3</td>
-                    <td>dato4</td>
-                    <td>
-                    	<form method="post" action=/editarUsuario>
-                    		<input type="submit" name="botonModificar" value="Editar">
-                    	</form>
-                    	<form method="post" action=/eliminarUsuario>
-                    		<input type="submit" name="botonEliminar" value="Eliminar">
-                    	</form>
-                    </td>
-                  </tr>
-                  <tr>
-                    <td>dato1</td>
-                    <td>dato2</td>
-                    <td>dato3</td>
-                    <td>dato4</td>
-                    <td>
-                    	<form method="post" action=/editarUsuario>
-                    		<input type="submit" name="botonModificar" value="Editar">
-                    	</form>
-                    	<form method="post" action=/eliminarUsuario>
-                    		<input type="submit" name="botonEliminar" value="Eliminar">
-                    	</form>
-                    </td>
-                  </tr>
-                  <tr>
-                    <td>dato1</td>
-                    <td>dato2</td>
-                    <td>dato3</td>
-                    <td>dato4</td>
-                    <td>
-                    	<form method="post" action=/editarUsuario>
-                    		<input type="submit" name="botonModificar" value="Editar">
-                    	</form>
-                    	<form method="post" action=/eliminarUsuario>
-                    		<input type="submit" name="botonEliminar" value="Eliminar">
-                    	</form>
-                    </td>
-                  </tr>
-                  <tr>
-                    <td>dato1</td>
-                    <td>dato2</td>
-                    <td>dato3</td>
-                    <td>dato4</td>
-                    <td>
-                    	<form method="post" action=/editarUsuario>
-                    		<input type="submit" name="botonModificar" value="Editar">
-                    	</form>
-                    	<form method="post" action=/eliminarUsuario>
-                    		<input type="submit" name="botonEliminar" value="Eliminar">
-                    	</form>
-                    </td>
-                  </tr>
-                  <tr>
-                    <td>dato1</td>
-                    <td>dato2</td>
-                    <td>dato3</td>
-                    <td>dato4</td>
-                    <td>
-                    	<form method="post" action=/editarUsuario>
-                    		<input type="submit" name="botonModificar" value="Editar">
-                    	</form>
-                    	<form method="post" action=/eliminarUsuario>
-                    		<input type="submit" name="botonEliminar" value="Eliminar">
-                    	</form>
-                    </td>
-                  </tr>
-                  <tr>
-                    <td>dato1</td>
-                    <td>dato2</td>
-                    <td>dato3</td>
-                    <td>dato4</td>
-                    <td>
-                    	<form method="post" action=/editarUsuario>
-                    		<input type="submit" name="botonModificar" value="Editar">
-                    	</form>
-                    	<form method="post" action=/eliminarUsuario>
-                    		<input type="submit" name="botonEliminar" value="Eliminar">
-                    	</form>
-                    </td>
-                  </tr>
-                  <tr>
-                    <td>dato1</td>
-                    <td>dato2</td>
-                    <td>dato3</td>
-                    <td>dato4</td>
+                  <tr th:each="usuario : ${usuarios}">
+                    <td th:text="${usuario.getUserID()}"></td>
+                    <td th:text="${usuario.getUsername()}"></td>
+                    <td th:text="${usuario.getEmail()}"></td>
+                    <td th:text="${usuario.getPhonenumber()}"></td>
+                    <td th:text="${usuario.getEnabled()}"></td>
+                    <td th:text="${usuario.getCmsAdmin()}"></td>
                     <td>
                     	<form method="post" action=/editarUsuario>
                     		<input type="submit" name="botonModificar" value="Editar">
@@ -475,10 +157,12 @@ scratch. This page gets rid of all links and provides the needed markup only.
                   </tbody>
                   <tfoot>
                   <tr>
-                    <th>columna1</th>
-                    <th>columna2</th>
-                    <th>columna3</th>
-                    <th>columna4</th>
+                    <th>ID</th>
+                    <th>Username</th>
+                    <th>Email</th>
+                    <th>Telefono</th>
+                    <th>Acceso</th>
+                    <th>Es Admin</th>
                     <th>Acciones</th>
                   </tr>
                   </tfoot>
